--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -108,7 +108,8 @@ a:hover small {
 }
 
 .wrapper {
-  width:860px;
+  /*width:860px;*/
+  width:90%;
   margin:0 auto;
 }
 
@@ -158,7 +159,8 @@ img {
 }
 
 header {
-  width:270px;
+  /*width:270px;*/
+  width:22%;
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
@@ -224,7 +226,8 @@ header ul a strong {
 }
 
 section {
-  width:500px;
+  /*width:500px;*/
+  width:70%;
   float:right;
   padding-bottom:50px;
 }
@@ -241,7 +244,8 @@ hr {
 }
 
 footer {
-  width:270px;
+  /*width:270px;*/
+  width:22%;
   float:left;
   position:fixed;
   bottom:50px;
