--- a/stylesheets/tos_features.css
+++ b/stylesheets/tos_features.css
@@ -1,6 +1,6 @@
 .tos_intro_heading {
 	text-align: left;
-	color: #8b5bff;
+	color: #426bff;
 	padding: 25px;
 	padding-left: 0px;
 }
@@ -50,7 +50,7 @@
 }
 
 .pattern_out {
-	color: #ff09ca;
+	color: #4b35ff;
 }
 
 .overlay {
