--- a/stylesheets/tos_features.css
+++ b/stylesheets/tos_features.css
@@ -5,7 +5,7 @@
 	padding-left: 0px;
 }
 
-.timer_container {
+.timer_container, .timer_container_milli {
 	float: left;
 	width: 250px;
 	height:200px;
@@ -31,7 +31,7 @@
 	padding-top: 10px;
 }
 
-.timer_container_set2 {
+.timer_container_set2, .timer_container_set3 {
 	display: inline-block;
 	margin-top: 15px;
 }
